--- a/index.html
+++ b/index.html
@@ -6,10 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bank Name</title>
+    <link rel="stylesheet" href="dashboard.css">
 </head>
 
 <body>
+    <div class="dashboard">
+        <div class="greetings">
+            <h2>Hi,</h2>
+            <span id="user-name">Om Kaushik</span>
+        </div>
+        <div class="avatar">
+            <img src="./images/avatar-svgrepo-com.svg" alt="user avatar">
+        </div>
+        <div class="options">
+            <div class="option"><img src="./images/home-svgrepo-com.svg" alt=""><span>Home</span></div>
+            <div class="option"><img src="./images/account-balance-cash-svgrepo-com.svg" alt=""><span>Balance</span>
+            </div>
+            <div class="option"><img src="./images/card-visa-svgrepo-com.svg" alt=""><span>Card</span></div>
+            <div class="option"><img src="./images/services-svgrepo-com.svg" alt="">Services</div>
+        </div>
+    </div>
+    <main>
 
+    </main>
 </body>
 
 </html>
