complete services section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bank App</title>
     <link rel="stylesheet" href="dashboard.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
 </head>
 
@@ -28,7 +29,16 @@
         </div>
     </div>
     <main>
-
+        <div class="header"></div>
+        <div class="second_row"></div>
+        <div class="services">
+            <h2>Services</h2>
+            <div class="s_options">
+                <div class="s_option"><img src="./images/add-money.svg" alt=""><span>Deposit</span></div>
+                <div class="s_option"><img src="./images/withdraw.svg" alt=""><span>Withdraw</span></div>
+                <div class="s_option"><img src="./images/edit-ui-svgrepo-com.svg" alt=""><span>Edit</span></div>
+            </div>
+        </div>
     </main>
 </body>
 
