--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Bank App</title>
     <link rel="stylesheet" href="dashboard.css">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.svg?">
+    <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.svg">
 </head>
 
 <body>
