--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
     <main>
         <div class="header"></div>
         <div class="second_row">
-            <div class="balance"></div>
+            <div class="balance">
+                <div class="b-card">
+                    <h2>Total Balance :</h2>
+                    <h3><span>&#8377;</span><span> 10,000</span></h3>
+                </div>
+            </div>
             <div class="card-container">
                 <div class="card">
                     <div class="card__front card__part">
