--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <img class="card__front-square card__square" id="sq"
                             src="./images/credit-card-chip-svgrepo-com.svg">
                         <img class="card__front-logo card__logo" id="visa" src="./images/visa-card.svg">
-                        <p class="card_numer">**** **** **** 6996</p>
+                        <p class="card_number">**** **** **** 6996</p>
                         <div class="card__space-75">
                             <span class="card__label">Card holder</span>
                             <p class="card__info">Ironman</p>
