Added time and date

--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
         </div>
     </div>
     <main>
-        <div class="header"></div>
+        <div class="header">
+            <span id="date">15 Jan 2023</span>
+            <span id="time"></span>
+            <span id="help">Sign Out</span>
+        </div>
         <div class="second_row">
             <div class="balance">
                 <div class="b-card">
@@ -77,6 +81,7 @@
             </div>
         </div>
     </main>
+    <script src="time-date.js"></script>
 </body>
 
 </html>
