add small screen error

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bank App</title>
     <link rel="stylesheet" href="dashboard.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="card.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.svg">
 </head>
 
@@ -81,6 +81,9 @@
             </div>
         </div>
     </main>
+    <div class='s_screen_error'>
+        <span id='s_screen_error_text'>Please open this webpage in a bigger window.</span>
+    </div>
     <script src="time-date.js"></script>
 </body>
 
