--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="dashboard">
         <div class="greetings">
             <h2>Hi,</h2>
-            <span id="user-name">Om Kaushik</span>
+            <span id="user-name">Hitesh Adhikari</span>
         </div>
         <div class="avatar">
             <img src="./images/avatar-svgrepo-com.svg" alt="user avatar">
